# flower

baselines/vfedentity/: .gitignore  README.md  pyproject.toml  requirements.txt
baselines/vfedentity/configs/: resnet18_misaligned_0.95.yaml
baselines/vfedentity/vfedentity/: __init__.py  client_app.py  server_app.py  strategy.py  task.py  utils.py
